Most functionality added and working as intended.